@@ -1,4 +1,3 @@
-- context menus for the hosts, dns and search tables, as well as DnD for dns/search
 - create good functions for parsing/validating IP addresses
 - code _get_xml for modem
 - make it save correctly modem info in debian
